Internal ip connection tamam veriler,yazıldı veritabanına arayüz değişti. Drawer Menu eklendi.Butonların eklenmesi kaldı. Ardından on/off switch yapılacak. Ondan sonra sadece relay üzerinden bağlantı kaldı o da tamam olduğunda artık lambalar yanacak hocam.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,7 +91,7 @@
     // Database Strings
 
     <string name="user_table">user</string>
-    <string name="room_table">room</string>
+    <string name="room_table">rooms</string>
     <string name="home_table">home</string>
     <string name="security_table">security</string>
     <string name="heater_table">heater</string>
